@@ -1,3 +1,15 @@
+2010-02-02  Kwang Yul Seo  <skyul@company100.net>
+
+        Reviewed by Eric Seidel.
+
+        [BREWMP] Port FileChooser
+        https://bugs.webkit.org/show_bug.cgi?id=34261
+
+        Port FileChooser to BREWMP.
+
+        * platform/brew/FileChooserBrew.cpp: Added.
+        (WebCore::FileChooser::basenameForWidth):
+
 2010-02-01  Zoltan Horvath  <zoltan@webkit.org>
 
         Reviewed by Darin Adler.
